2006-10-12  Albert Astals Cid <aacid@kde.org>

	* splash/Splash.cc:
	* splash/SplashErrorCodes.h: Do not crash on documents that report a
	0x0 mask for an image, like
	http://bugs.kde.org/attachment.cgi?id=18083&action=view

2006-09-30  Albert Astals Cid <aacid@kde.org>

	* qt4/src/poppler-page.cc: PA is optional, H is a name not a string

2006-09-25  Albert Astals Cid <aacid@kde.org>

	* glib/Makefile.am
	* qt/Makefile.am
	* qt4/src/Makefile.am
	* qt4/tests/Makefile.am
	* test/Makefile.am
	* utils/Makefile.am: Add FONTCONFIG_CFLAGS FONTCONFIG_LIBS for people
	that need them. Patch by morfoh@opensde.org. Fixes bug #8415

2006-09-21  Kristian Høgsberg  <krh@redhat.com>

	* NEWS: Update list of bugs fixes, release 0.5.4.

	* configure.ac: Check for gtk+ 2.8 for the gtk+ test case, invert
	help text for zlib option (#7788, #7661).

	* utils/pdftops.cc: Get duplex setting from GlobalParams.

	* glib/poppler-page.cc (_poppler_page_new): Make PopplerPage
	reference its document throughout the lifetime of the page (#7005).

	* poppler/Gfx.cc: Remove the right out->updateAll() call.

2006-09-20  Kristian Høgsberg  <krh@redhat.com>

	* NEWS: Sum up changes.

	* configure.ac: Bump release to 0.5.4.

	* poppler/Gfx.cc: Remove last remnant of erroneous type3 commit a
	while back, fixing #8182.

2006-09-20  Jeff Muizelaar  <jeff@infidigm.net>

	* poppler/TextOutputDev.cc: TextFontInfo stores a copy of a pointer
	to a GfxFont but does not increment the reference count. Fix the
	problem by calling incRefCnt and decRefCnt appropriately. Fixes #4649

2006-09-19  Kristian Høgsberg  <krh@redhat.com>

	* poppler/GlobalParams.cc: Add scanEncodingDirs() to automatically
	scan in any encodings found under ${datadir}/poppler.

	* m4/define-dir.m4: New file, adds AC_DEFINE_DIR macro.

2006-09-13  Kristian Høgsberg  <krh@redhat.com>

	* poppler/Makefile.am (libpoppler_la_LIBADD): Add cairo libs to
	link if configured.

	* configure.ac: Tighten glib check (#7906), add check for C++